--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -1,7 +1,7 @@
 
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/uiSet.css">
-<link rel="stylesheet" href="../css/footer.css">
+<link rel="stylesheet" href="../../asset/css/reset.css">
+<link rel="stylesheet" href="../../asset/css/uiSet.css">
+<link rel="stylesheet" href="../../asset/css/footer.css">
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="../js/header.js"></script>
@@ -10,28 +10,28 @@
         <section class="footerContain">
             <section class="logoContain">
                 <section class="logo">
-                    <img src="../image/home_header_logo.png">
+                    <img src="../../assets/image/home_header_logo.png">
                 </section>
             </section>
             <section class="socialContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_facebook.png">
+                        <img src="../../assets/image/home_footer_facebook.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_instagram.png">
+                        <img src="../../assets/image/home_footer_instagram.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_twitter.png">
+                        <img src="../../assets/image/home_footer_twitter.png">
                     </a>
                 </section>
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_footer_line.png">
+                        <img src="../../assets/image/home_footer_line.png">
                     </a>
                 </section>
             </section>
