--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -1,7 +1,7 @@
 
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/uiSet.css">
-<link rel="stylesheet" href="../css/header.css">
+<link rel="stylesheet" href="../../asset/css/reset.css">
+<link rel="stylesheet" href="../../asset/css/uiSet.css">
+<link rel="stylesheet" href="../../asset/css/header.css">
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="../js/header.js"></script>
@@ -11,7 +11,7 @@
             <section class="logoContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_header_logo.png">
+                        <img src="../../assets/image/home_header_logo.png">
                     </a>
                 </section>
             </section>
@@ -49,12 +49,12 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconBell.png">
+                                    <img src="../../assets/image/home_header_iconBell.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconMember.png">
+                                    <img src="../../assets/image/home_header_iconMember.png">
                                 </a>
                             </section>
                         </section>
