--- a/html/layout/headerNormol.html
+++ b/html/layout/headerNormol.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/uiSet.css">
-<link rel="stylesheet" href="../css/headerNormal.css">
+<link rel="stylesheet" href="../../assets/css/reset.css">
+<link rel="stylesheet" href="../../assets/css/uiSet.css">
+<link rel="stylesheet" href="../../assets/css/headerNormal.css">
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="../js/header.js"></script>
@@ -10,7 +10,7 @@
             <section class="logoContain">
                 <section class="logo">
                     <a href="">
-                        <img src="../image/home_header_logo.png">
+                        <img src="../../assets/image/home_header_logo.png">
                     </a>
                 </section>
             </section>
@@ -48,12 +48,12 @@
                         <section class="memberList">
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconBell.png">
+                                    <img src="../../assets/image/home_header_iconBell.png">
                                 </a>
                             </section>
                             <section class="icon">
                                 <a href="">
-                                    <img src="../image/home_header_iconMember.png">
+                                    <img src="../../assets/image/home_header_iconMember.png">
                                 </a>
                             </section>
                         </section>
