--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,7 @@
 @import 'page/login';
 @import 'page/supportChatroom';
 @import 'page/homePage';
+@import 'page/galleryDoor';
+@import 'layout/footer';
+@import 'layout/header';
+@import 'layout/headerNormal';
