--- a/html/layout/headerNormol.html
+++ b/html/layout/headerNormol.html
@@ -6,7 +6,7 @@
 <script src="../js/header.js"></script>
 
 <header>
-        <section class="headerContain">
+        <section class="headerNormalContain">
             <section class="logoContain">
                 <section class="logo">
                     <a href="">
