--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,10 @@
 @import 'page/about';
-// @import 'page/login';
-// @import 'page/supportChatroom';
+@import 'page/login';
+@import 'page/supportChatroom';
 @import 'page/homePage';
 // @import 'page/galleryDoor';
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/headerNormal';
+@import 'page/product';
+@import 'page/productItem';
