--- a/sass/page/galleryDoor.scss
+++ b/sass/page/galleryDoor.scss
@@ -7,7 +7,7 @@ html, body, .stage, .ring, .img {
 
 html, body, .stage {
     overflow:hidden;
-    background:#000;
+    background:#fff;
 }
 
 div, svg {
