--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,3 +8,5 @@
 @import 'layout/headerNormal';
 @import 'page/product';
 @import 'page/productItem';
+@import 'page/articleAll';
+@import 'page/articlePage';
