修改header、footer路徑，bug修改

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,3 @@
-.main{
-    height: 100vh;
-    background-color: #fff;
-}
 footer{
     background-color: #FBF7F3;
     padding: 20px 0;
@@ -33,16 +29,16 @@ footer{
     transition: .3s;
 }
 .footerContain .socialContain .logo:nth-child(1) img:hover{
-    content: url(../image/home_footer_facebookHover.png);
+    content: url(assets/image/home_footer_facebookHover.png);
 }
 .footerContain .socialContain .logo:nth-child(2) img:hover{
-    content: url(../image/home_footer_instagramHover.png);
+    content: url(assets/image/home_footer_instagramHover.png);
 }
 .footerContain .socialContain .logo:nth-child(3) img:hover{
-    content: url(../image/home_footer_twitterHover.png);
+    content: url(assets/image/home_footer_twitterHover.png);
 }
 .footerContain .socialContain .logo:nth-child(4) img:hover{
-    content: url(../image/home_footer_lineHover.png);
+    content: url(assets/image/home_footer_lineHover.png);
 }
 .footerContain .socialContain .logo img{
     width: 100%;
