--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -1,38 +1,37 @@
 
 <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="js/header.js"></script>
 
 <footer>
-        <section class="footerContain">
-            <section class="logoContain">
-                <section class="logo">
+    <section class="footerContain">
+        <div class="logoContain">
+                <div class="logo">
                     <img src="assets/image/home_header_logo.png">
-                </section>
-            </section>
-            <section class="socialContain">
-                <section class="logo">
+                </div>
+        </div>
+        <div class="socialContain">
+                <div class="logo">
                     <a href="">
                         <img src="assets/image/home_footer_facebook.png">
                     </a>
-                </section>
-                <section class="logo">
+                </div>
+                <div class="logo">
                     <a href="">
                         <img src="assets/image/home_footer_instagram.png">
                     </a>
-                </section>
-                <section class="logo">
+                </div>
+                <div class="logo">
                     <a href="">
                         <img src="assets/image/home_footer_twitter.png">
                     </a>
-                </section>
-                <section class="logo">
+                </div>
+                <div class="logo">
                     <a href="">
                         <img src="assets/image/home_footer_line.png">
                     </a>
-                </section>
-            </section>
-            <nav>
+                </div>
+        </div>
+        <nav>
                 <ul>
                     <li>
                         <a href="">藝廊</a>
@@ -50,9 +49,9 @@
                         <a href="">會員中心</a>
                     </li>
                 </ul>
-            </nav>
-            <section class="copyright">
+        </nav>
+        <div class="copyright">
                 <p>@2022 Powered by 藝論 Right Reserved<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
-            </section>
-        </section>
+        </div>
+    </section>
 </footer>
