--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,14 @@
+
+@import 'basic/reset';
+@import 'basic/uiSet';
+@import 'layout/header';
+@import 'layout/headerNormal';
+@import 'layout/footer';
+@import 'page/homePage';
 @import 'page/about';
 @import 'page/login';
 @import 'page/supportChatroom';
-@import 'page/homePage';
 // @import 'page/galleryDoor';
-@import 'layout/footer';
-@import 'layout/header';
-@import 'layout/headerNormal';
 @import 'page/product';
 @import 'page/productItem';
 @import 'page/articleAll';
