--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,19 @@
 @import 'page/articlePage';
 
 @import 'basic/uiSet';
+
+
+//會員中心
+@import 'page/3dSurroundView';
+@import 'page/accountManagement';
+@import 'page/buttonStyle';
+@import 'page/collect';
+@import 'page/component';
+@import 'page/consumptionRecord';
+@import 'page/customCharacter';
+@import 'page/myListing';
+@import 'page/notice';
+
+
+
+
