header 刪除padding top20

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,8 @@
 header{
     /* margin: 20px 0px; */
     position: sticky;
-    top: 0px;
-    padding-top: 20px;
+    top: 20px;
+    // padding-top: 20px;
     z-index: 9999;
 }
 /* header容器 */
