--- a/sass/layout/_headerNormal.scss
+++ b/sass/layout/_headerNormal.scss
@@ -1,7 +1,7 @@
 header{
     position: sticky;
-    top: 0px;
-    padding-top: 20px;
+    top: 20px;
+    // padding-top: 20px;
     z-index: 9999;
     /* background-color: #ff0; */
 }
