--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -4,7 +4,7 @@
     <section class="footerContain">
         <div class="logoContain">
                 <div class="logo">
-                    <img src="assets/image/home_header_logo.png">
+                    <img src="assets/image/all_logo.png">
                 </div>
         </div>
         <div class="socialContain">
