--- a/html/layout/headerNormal.html
+++ b/html/layout/headerNormal.html
@@ -6,7 +6,7 @@
         <section class="logoContain">
             <div class="logo">
                     <a href="">
-                        <img src="assets/image/home_header_logo.png">
+                        <img src="assets/image/all_logo.png">
                     </a>
             </div>
         </section>
