--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -211,3 +211,12 @@ p.small{
         font-size: 1.125em;
     }
 }
+// ======= input ==== //樣式
+// font-size: 1em;
+// border-radius: 200px;
+// box-sizing: border-box;
+// padding: 0.5em 1em;
+// border:none;
+// box-shadow: -1px -1px 2px 0px #ffffff inset,1px 1px 3px 0px #aaaaaaaa inset;
+// line-height: 2em;
+// background-color: transparent;
