--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -43,8 +43,8 @@ body{
 }
 /* 文字顏色(淺色) */
 .lightColor{
-    color: #BCBCBC;
-}
+    color: #4b4b4b;
+}   
 /* 文字背景色(淺色) */
 .lightBgColor{
     color: #BCBCBC;
