--- a/sass/page/_articleAll.scss
+++ b/sass/page/_articleAll.scss
@@ -1,6 +1,7 @@
 .articleContent{
     width: 90%;
     background-color:#FBF7F3;
+    background-image: url("https://www.transparenttextures.com/patterns/natural-paper.png");
     padding: 10px;
     margin:60px auto ;
     box-sizing: border-box;
