--- a/sass/page/_login.scss
+++ b/sass/page/_login.scss
@@ -9,11 +9,21 @@
         display: none;
     }
     >article{
+        // background-color: #3e444a05;
+        // box-shadow: 0.1em 0.5em 0.5em #252b3020;
+        // box-shadow: 0.1em 0.5em 0.5em #252b3020;
+        // border: 1px solid #94969b50;
+        // border-right: 1px solid #55595e20;
+        // border-bottom: 1px solid #55595e20;
+        // border-left: 1px solid #ffffff30;
+        // backdrop-filter: blur(0.5em);
+
+
         /* 登入註冊區操作區大小 */
         /* 定位內部2塊 登入註冊區 切換區 定位用 */
         display: flex;
         flex-wrap: wrap;
-        min-height: 700px;
+        min-height: 500px;
         margin: auto;
         position: relative;
         border-radius: 10px;
@@ -23,6 +33,7 @@
             height: auto;
         }
         >article{
+
             /* 選取登入註冊輸入區、登入註冊切換區 */
             position: absolute;
             box-sizing: border-box;
@@ -95,6 +106,27 @@
             box-shadow: 0px 0px 8px 1px #aaaaaa55 ;
             top: 25em;
             transition: top 1s ;
+            // background-color: #fde465 ;
+            background-color: #3e444a05;
+            // box-shadow: 0.1em 0.5em 0.5em #252b3020;
+            // box-shadow: 0.1em 0.5em 0.5em #252b3020;
+            // border: 1px solid #94969b50;
+            // border-right: 1px solid #55595e20;
+            // border-bottom: 1px solid #55595e20;
+            // border-left: 1px solid #ffffff30;
+            backdrop-filter: blur(0.5em);
+            .roundOutline{
+                /* 橢圓形外框按鈕 */
+                // Box-shadow: 0px 0px 5px 0px #00000055 ;
+                transform: scale(1);
+            }
+            .roundOutline:hover,.squareOutline:hover{
+                /* hover橢圓形外框按鈕 */
+                transform: scale(0.95);
+                transition: transform 0.5s ;
+            }
+
+
             @media screen and (min-width:768px) {
                 top: 0;
                 width: calc( 100%/5 * 2 );
