--- a/sass/page/_galleryDoor.scss
+++ b/sass/page/_galleryDoor.scss
@@ -1,17 +1,22 @@
-html, body, .stage, .ring, .img {
+.stage, .ring, .img {
     width:100%;
     height: 100%;
     transform-style: preserve-3d;
     user-select:none;
 }
-html, body, .stage {
+.size .stage {
     overflow:hidden;
     background:#fff;
 }
-div, svg {
+.galleryDoorMain{
+    position: relative;
+    width: 100%;
+    height: 95vh;
+}
+.size, .ring, .img, svg {
     position: absolute;
 }
-.container {
+.size {
     perspective: 1000px;
     width: 300px;
     height: 500px;  
