修改產品們的邊界以及一些樣式的修正

--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -187,7 +187,12 @@ p.small{
     max-width: 1200px;
     width: 90%;
 }
-
+.marginAuto{
+    margin: auto;
+}
+.displayNone{
+    display: none;
+}
 @media screen and (max-width:768px){
     /* 主標文字大小(手機) */
     h1{
