--- a/sass/page/_productItem.scss
+++ b/sass/page/_productItem.scss
@@ -1,8 +1,8 @@
 /* 麵包屑 */
 .SingleProductHead{
     width: 100%;
-    max-width: 1200px;
     margin: auto;
+    margin-top: 60px;
 }
 .SingleProductHead .productBread{
     margin: auto;
@@ -12,7 +12,6 @@
 /* 商品介紹 */
 .SingleProductIntro{
     width: 100%;
-    max-width: 1200px;
     margin: auto;
     margin-bottom: 5%;
 }
@@ -198,7 +197,6 @@
 /* 更多商品 */
 .SingleProductMoreP{
     width: 100%;
-    max-width: 1200px;
     margin: auto;
     margin-bottom: 5%;
 }
