--- a/sass/page/_galleryDoor.scss
+++ b/sass/page/_galleryDoor.scss
@@ -1,30 +1,48 @@
-.stage, .ring, .img {
-    width:100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    user-select:none;
-}
-.size .stage {
-    overflow:hidden;
-    background:#fff;
-}
-.galleryDoorMain{
-    position: relative;
+//galleryDoorMain > stage > size > ring > door
+//藝廊入口 Body
+.galleryDoorWrap{
+    //隱藏超出畫面的物件(卷軸)
     width: 100%;
-    height: 95vh;
-}
-.size, .ring, .img, svg {
-    position: absolute;
-}
-.size {
-    perspective: 1000px;
-    width: 300px;
-    height: 500px;  
-    left:50%;
-    top:50%;
-    transform:translate(-50%,-50%);
-}
-.img{
-    border-radius: 555em 555em 0 0;
-    overflow:hidden;
+    overflow: hidden;
+
+    .galleryDoorMain{
+        position: relative;
+        width: 100%;
+        height: 95vh;
+    
+        // 3D效果
+        %the3D{
+            width:100%;
+            height: 100%;
+            transform-style: preserve-3d;
+            user-select:none;
+        }
+        .stage{
+            @extend %the3D;
+            .size{
+                //定位父層galleryDoorMain
+                position: absolute;
+                perspective: 1000px;
+                width: 300px;
+                height: 800px;  
+                left:50%;
+                top:60%;
+                transform:translate(-50%,-50%);
+
+                .ring{
+                    @extend %the3D;
+                    //定位父層galleryDoorMain
+                    position: absolute;
+
+                    .door{
+                        @extend %the3D;
+                        //定位父層galleryDoorMain
+                        position: absolute;
+                        border-radius: 555em 555em 0 0;
+                        overflow:hidden;
+                    }
+                }
+            }
+        }
+    }
 }
