--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -77,35 +77,35 @@ h1{
 }
 /* 副標文字大小 */
 h2{
-    /* font-size: 40px; */
-    font-size: 2.5em;
-    line-height: 2;
+    /* font-size: 31.25px; */
+    font-size: 1.953em;
+    line-height: 3;
 	letter-spacing:2px;
 }
 /* 內文標題大小 */
 h3{
-    /* font-size: 30px; */
-    font-size: 1.875em;
+    /* font-size: 25px; */
+    font-size: 1.563em;
     line-height: 2;
 	letter-spacing:2px;
 }
 /* 內文副標大小 */
 h4{
-    /* font-size: 24px; */
-    font-size: 1.5em;
-    line-height: 2;
+    /* font-size: 20px; */
+    font-size: 1.25em;
+    line-height: 1.5;
 	letter-spacing:2px;
 }
 /* 內文文字大小 */
 p{  
-    /* font-size: 20px; */
-    font-size:1.25em;
+    /* font-size: 16px; */
+    font-size:1em;
     line-height: 1.3;
 	letter-spacing:3px;
 }
 p.small{  
-    /* font-size: 13px; */
-    font-size:0.875em;
+    /* font-size: 12.8px; */
+    font-size:0.8em;
     line-height: 1.5;
 	letter-spacing:2px;
 }
@@ -203,26 +203,43 @@ p.small{
         /* font-size: 50px; */
         font-size: 3.125em;
     }
-    /* 副標文字大小(手機) */
+    /* 副標文字大小 */
     h2{
-        /* font-size: 32px; */
-        font-size: 2em;
+        /* font-size: 31.25px; */
+        font-size: 1.953em;
     }
-    /* 內文標題大小(手機) */
+    /* 內文標題大小 */
     h3{
-        /* font-size: 22.4px; */
+        /* font-size: 25px; */
         font-size: 1.4em;
     }
-    /* 內文副標大小(手機) */
+    /* 內文副標大小 */
     h4{
         /* font-size: 20px; */
         font-size: 1.25em;
     }
-    /* 內文文字大小(手機) */
-    p{
-        /* font-size:18px; */
-        font-size: 1.125em;
+    /* 內文文字大小 */
+    p{  
+        /* font-size: 16px; */
+        font-size:1em;
+        line-height: 1.3;
+        letter-spacing:3px;
     }
+    p.small{  
+        /* font-size: 12.8px; */
+        font-size:0.8em;
+        line-height: 1.5;
+        letter-spacing:2px;
+    }
+
+
+
+
+
+
+
+
+
 }
 // ======= input ==== //樣式
 // font-size: 1em;
